# ZOGY

./: LICENSE.txt  README.md  force_phot.py  plot_lightcurve_fp.py  pyproject.toml  setup.py  zogy.py
Config/: psfex.config  psfex.config~  psfex_20180404.config  scamp.config  sex.config  sex.config~  sex.params  sex.params~  sex_20180319.config  sex_20180319.params  sex_psffit.config  sex_psffit.config~  sex_psffit.params~  sex_psffit_20180322.params  sex_psffit_20180614.config  sex_psffit_20180614.params  sex_ref.params  sex_ref_20180404.params  sex_ref_20180725.params  sex_trans.params  sex_trans_20180319.config  sex_trans_20180322.params  sex_trans_20180614.config  swarp.config  swarp_20180326.config
InstallScripts/: install_zogy_macos.sh  install_zogy_ubuntu.sh
PreGithubVersions/: zogy_20170209.py  zogy_20170210.py  zogy_20170216.py
Settings/: Constants.py  Constants_meerlicht.py  set_zogy.py
Utils/: Constants.py  Constants.py~  Constants_meerlicht.py  Constants_meerlicht.py~  Constants_panstarrs.py  Constants_panstarrs.py~
