
[build-system]
requires = ['setuptools'] #, 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'zogy'
version = '1.7.0'
#dynamic = ['version']
authors = [
  {name = 'Paul Vreeswijk', email = 'pmvreeswijk@gmail.com'},
  {name = 'Kerry Paterson'},
  {name = 'Danielle Pieterse'},
]
description = 'a Python implementation of proper image subtraction (ZOGY 2016, ApJ, 830, 27)'
readme = 'README.md'
requires-python = '>=3.6'
license = 'MIT'
dependencies = [
    'numpy', 'astropy', 'matplotlib', 'scipy', 'psutil',
    'pyfftw', 'lmfit', 'sip_tpv', 'scikit-image', 'healpy',
    'tensorflow-cpu', 'protobuf', 'fitsio', 'fsspec', 'gcsfs']

[project.urls]
Homepage = 'https://github.com/pmvreeswijk/ZOGY'

[tool.setuptools.packages.find]
where = ['.']
include = ['Settings']
exclude = ['Config']
